--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://root:hello@cluster0.ixbxa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=Complaint_Management
+spring.main.allow-circular-references=true
